@@ -113,6 +113,10 @@ Mod(0, 5)*x^-1 + O(x^0)
 1
 1
 0
+1
+1
+1
+1
 1 + O(x^200)
 1
 1 + x^3 + O(x^6)
@@ -177,4 +181,4 @@ O(x^18)
   ***   at top-level: O(y)/O(x)
   ***                     ^-----
   *** _/_: impossible inverse in RgXn_inv: 0.
-Total time spent: 11
+Total time spent: 8
