@@ -81,6 +81,8 @@ BA  54- ((x^7+x^3+x+1)*Mod(1,Mod(1,2)*d))%(x^4+x^3+x^2+1)->x^3+x
 BA  62- factor((x-1)*(x-y)^2) --> oo-loop
 BA  63- ellap could fail with division by 0
     64- wrong results in bnfsunit [#2207]
+    65- problems with gequal(t_SER or t_POL with inexact coefs or constant
+        wrt. some variables). E.g. S=x+O(x^2);T=S+O(y); S == T -> 0 [#2188]
 
   Changed
      1- [libpari] rename rootsof1 -> nfrootsof1
